--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <!-- <script src="js/fundamentos.js"></script> -->
 <!-- <script src="js/fundamentos_exercicios.js"></script> -->
-<script src="js/avancando.js"></script>
+<!-- <script src="js/avancando.js"></script> -->
+<script src="js/avancando_exercicios.js"></script>
 </body>
 </html>
