--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 <!-- <script src="js/fundamentos_exercicios.js"></script> -->
 <!-- <script src="js/avancando.js"></script> -->
 <!-- <script src="js/avancando_exercicios.js"></script> -->
-<script src="js/dom.js"></script>
+<!-- <script src="js/dom.js"></script> -->
+<script src="js/javascript_moderno.js"></script>
 </body>
 </html>
